# ALICE-Browser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  MOBILE_SPEC.md  README.md
.github/workflows/: ci.yml
src/: analytics_bridge.rs  cache_bridge.rs  cdn_bridge.rs  lib.rs  main.rs  sdf_bridge.rs  search.rs  search_bridge.rs  telemetry.rs  text_bridge.rs  view_bridge.rs  voice_bridge.rs
src/app/: content.rs  mod.rs  navigation.rs  toolbar.rs
src/branchless/: color.rs  filter.rs  mask.rs  mod.rs
src/dom/: css.rs  filter.rs  ml_classifier.rs  mod.rs  parser.rs  readability.rs
src/engine/: pipeline.rs
src/fast_math/: mod.rs
src/mobile/: mod.rs  touch.rs  ui.rs
src/net/: adblock.rs  cache.rs  fetch.rs  image.rs  mod.rs  service_worker.rs
src/oz/: mod.rs
src/render/: animator.rs  gpu_renderer.rs  hot_reload.rs  hyper_sdf.rs  layout.rs  mod.rs  persistent_map.rs  sdf_paint.rs  sdf_renderer.rs  sdf_ui.rs  spatial.rs  stream.rs  text.rs
src/simd/: adblock.rs  classify.rs  layout.rs  mod.rs  soa.rs
src/ui/: mod.rs
